# RlatedWorksAgent

./: .env.example  .gitignore  DEVELOPMENT_ROADMAP.md  PROGRESS.md  README.md  config.yaml  pyproject.toml  related_work_agent_dev_doc.md
backend/: main.py  requirements.txt  test_db.py
backend/agents/: __init__.py
backend/api/: websocket.py
backend/api/routes/: chat.py  config.py  papers.py  projects.py
backend/core/: llm_factory.py  security.py
backend/db/: __init__.py  crud.py  database.py  models.py
backend/rag/: __init__.py
data/background_papers/: 寻找分簇网络论文对比.docx  论文对比分析与文献检索.docx  论文相关工作调研指南.docx
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: config.ts
frontend/src/pages/: ChatPage.tsx  EditorPage.tsx  LibraryPage.tsx  SettingsPage.tsx
legacy/: review_advisor_dev_doc.md  面试总结_RelatedWorksAgent.md
src/: __init__.py  config.py  pipeline.py
src/generation/: bib_refiner.py  llm_client.py  prompt_builder.py  scorer.py  writer.py
src/indexing/: colbert_indexer.py  embedder.py  vector_store.py
src/ingestion/: chunker.py  my_paper_parser.py  pdf_parser.py
src/retrieval/: reranker.py  retriever.py
src/review_advisor/: __init__.py  pipeline.py  retriever_adapter.py
src/review_advisor/analysis/: __init__.py  intent_classifier.py  query_builder.py
src/review_advisor/extraction/: __init__.py  annotation_extractor.py  context_assembler.py  text_review_parser.py
src/review_advisor/generation/: __init__.py  report_builder.py  suggestion_generator.py
src/review_advisor/utils/: __init__.py  diff_utils.py
src/style_analyzer/: venue_analyzer.py
src/utils/: latex_utils.py  logging_utils.py  parallel.py
